# header-only-cmake-template

./: .clang-tidy  .gitignore  .wpiformat-license  CMakeLists.txt  LICENSE.txt  README.md  templateConfig.cmake.in
.github/workflows/: cpp.yml  documentation.yml  lint-format.yml  sanitizers.yml
cmake/: CompilerFlags.cmake
docs/: Doxyfile  README.md
examples/example/include/: example.hpp
examples/example/src/: example.cpp
examples/example/test/: example_test.cpp
test/include/: catch_matchers.hpp
test/src/: test.cpp
tools/: generate-coverage.sh  generate-docs.sh
